--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "agenda": "^1.0.0",
-    "axios": "^0.16.2",
-    "mongodb": "^2.2.31",
-    "ramda": "^0.24.1"
+  "devDependencies": {},
+  "dependencies": {
+    "agenda": "^1.0.3",
+    "axios": "^0.17.1",
+    "config": "^1.29.2",
+    "mongodb": "^3.0.1",
+    "ramda": "^0.25.0",
+    "winston": "^2.4.0"
   }
 }
